wp-content/themes/MC-genesis-boilerplate/custom.css
/* ... */
.sub-menu {
  display: none;
}
.reveal {
  display: block;
}
ul.shift { 
  position:absolute;
  top: 0%;
  left: 100%;
}
/*the arrow for menu items with children that are not top level*/
#submenuarrow {
  position: absolute;
  top:15px;
  right: 0px;
}


/* Left Sidebar */
#left-sticky{
	float: right;
	overflow: hidden;
	height: 100%;
	box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.15);
}
.logo {
	display: block;
	margin: 0 auto;
	padding: 5% 5%;
	margin-bottom: 33px;	
}
 #left-sticky h2 {
	padding: 8%;
	border-top: 0.5px solid rgba(136, 175, 193, 0.8);
	margin:0;
  color: #2b2767;
  font-family: "museo",serif;
  font-size: 22px;
  font-weight: 100;
}

/* Hours */
.hourblock {
  background-color: rgba(136, 175, 193, 0.1);
}
.hourblock h2{
  padding: 8%;
  border-top: 0.5px solid rgba(136, 175, 193, 0.8);
  margin: 0;
  color: #2b2767;
  font-family: "museo",serif;
  font-size: 22px;
  font-weight: 100;
}
.hour-inner{
	padding: 0 15%;
	color: #2b2767;
	font-family: 'Noto Sans', sans-serif;
	font-size: 0.8em;
}
.hour-inner li{
	margin-bottom: 16px;
}
.dow, .hours{
	padding:0;
}
.current-hours{
	color: #a92e89;
}
/* mobile widget for hours & language */
#hours_language_mobile {
    display: none;
}
.library-hours-arrows{
  border: solid #a92e89;
  border-width: 0 2px 2px 0;
  display: inline-block;
  padding: 3px;
}
.library-hours-up {
  transform: rotate(-135deg);
  -webkit-transform: rotate(-135deg);
}
.library-hours-down {
  transform: rotate(45deg);
  -webkit-transform: rotate(45deg);
}
#mobile-hours > li, #mobile-hours-days > li{
  list-style: none !important;
}

/* only show on mobile */
@media screen and (max-width: 640px){
    #hours_language_mobile {
      display: block;
    }
    #google_translate_mobile{
      padding-top: 10px;
    }
}





/* Connect Links */
.connect  {
  text-align: left;
  padding: 0 5%;
  list-style: none;
}
.connect a {
  color:#2b2767;
  display: block;
  height: 30%; 
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}
.connect a:hover {
  color: #66619c;
  text-decoration: none;
}
.connect li i{
  padding: 4px 8px 4px 8px;
}
.connect li span{
  font-family: 'Noto Sans', sans-serif;
  font-size: 13px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.46;
  letter-spacing: normal;
}

/* Social */
.social {
 padding: 4px 8px 4px 4px;
}
.sidebar address {
	max-width: 212px;
	padding: 8px 16px;
	margin: 12px 0 30px;
  color: #2b2767;	
	font-size: 0.8em;
	text-align: left;
}
.address{
	display:block;
	margin-bottom: 10px;
}

/* Sidebar Fixed Positiions */   
#genesis-sidebar-secondary {
  z-index: 99999;
}
.wsoffcanvasopener .wsmenu {
  z-index: 999999;
 }
 #genesis-content .sidebar-primary {
  max-width: 308px;
}
#genesis-content .content {
  width: 801px;
  padding: 12px;
}
#genesis-content .content-sidebar-sidebar .content-sidebar-wrap,
.sidebar-content-sidebar .content-sidebar-wrap,
.sidebar-sidebar-content .content-sidebar-wrap {
  max-width: 1139px;
}
#genesis-sidebar-secondary > section { 
  display: none;
}


/* ## Content CSS
--------------------------------------------- */
.content-sidebar-wrap{
  padding-top: 70px;
}
.content ul li, .content ol li{
  font-size: 14px;
  line-height: 1.5;
  letter-spacing: normal;
  text-align: left;
  color: rgba(0,0, 0, 0.9);
  list-style: disc !important;
  margin-left:24px;
}
/* Search Bars */
.searchwrapper {
  font-family: 'Noto Sans', sans-serif;
  font-size: 13px;
  line-height: 1.4;
  text-align: left;
  color: rgba(0, 0, 0, 0.6);
  position:relative;
  margin-bottom:8px;
}
.imgsubmit {
  position: absolute;
  top:0px;
  right: 0px;
}
.searchwrapper input.imgsubmit {
  padding: 11px;
  border: none;
  margin: 1px;
} 

/*library catalog results frame*/

/*this broke about-portal page */
/*#homecards {*/
/*margin-top:-33px;*/
/*}*/

.catalogframe {
  margin-bottom:33px;
}
/*this broke the expandable iframe*/
/*.catalogframe{
  height:1px;
}*/

/* Carousel Module*/
.carousel {

}
.carousel-item .img-fluid {
  width:100%;
  height:100%;
}
#carousel .carousel-caption {
  position: absolute;
  left:2%;
  margin-bottom: 20px;
  text-align: left;
  font-size: 32px;
  font-family: 'museo', sans-serif;
  line-height: 1.14;
  font-weight: 700;
}
#carousel h3 {
  font-size: 32px;
  font-weight: 700;
}
  /* alerts section */
  #carousel .alert{
    position: absolute;
    width:100%;
    margin:0px;
    z-index: 8;
    bottom: 0px;
    background: #ff5959;
    color: white;
  }
  #carousel .alert{
    text-align: left;
    font-size: 14px;
    line-height: 14px;
  }
  #carousel .alert .message{
    position: relative;
    top: -6px;
    padding-left: 20px;
  }
  #carousel .alert i{
    color:#ffffff;
  }

  div.alert > i, #hide-alert > i {
    margin: 10px;
  }

/* Card Content Grids */
.squaregrid .hold{
  padding: 2px;
}
.squaregrid a {
  display:block;
  border: solid 1px #dddddd;
  padding: 28px;
  margin:1px;
  height:100%;
}
.squaregrid .link .header{
  font-family: 'museo', sans-serif;
  font-weight: 600;
}
.squaregrid a.link .blurb{
  font-family: 'Noto Sans', sans-serif;;
  font-weight: 100;
  font-size: 13px;
  line-height: 1.54;
  color: rgba(0, 0, 0, 0.38);
}
.squaregrid a.link:hover {
  color:#ffffff;
  background: #88afc1;
}
.squaregrid a.link:hover .blurb{
  color:#ffffff;
}
.squaregrid{
  font-family: 'Noto Sans', sans-serif;
  font-weight: 100;
  font-size: 13px;
  line-height: 1.54;
}

/* Title & Blurb */
.title{
  margin-bottom: 48px;
}
.title h1{
  font-family: Museo;
  font-size: 2.8em;
  font-weight: bold;
  letter-spacing: normal;
  color: #2b2767;
}
.title .excerpt{
  font-family: 'Noto Sans', sans-serif;
  font-size: 24px;
  line-height: 1.5;
  color: rgba(0, 0, 0, 0.87);
}
.title .excerpt a{
  font-weight: bold;
  color: rgb(136, 175, 193);
}
/* ... */

